Added water only image

--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
 
     <div id="table-div"></div>
 
+    <img id="water-features" src="https://maps.googleapis.com/maps/api/staticmap?maptype=roadmap&center=1.412811,103.774780&scale=2&zoom=14&size=640x640&style=feature:administrative|visibility:off&style=feature:landscape|visibility:off&style=feature:poi|visibility:off&style=feature:road|visibility:off&style=feature:transit|visibility:off&style=feature:water|color:0x000000&style=element:labels|visibility:off&key=AIzaSyBP9pYHfZKn0Ts4xt7eV89X-3YH6ohAKJQ">
+
     <footer>
         <div id="footer-text">
             <h3>ORD lo.</h3>
-            <p>Alex: <a href="https://github.com/Airiinnn">GitHub</a></p>
+            <p>Alex: <a href="https://github.com/Airiinnn">GitHub</a> | <a href ="mailto: alex.liswandy@hotmail.com">Contact</a></p>
             <p>Wuihee: <a href="https://github.com/wuihee">GitHub</a> | <a href ="mailto: wuihee@gmail.com">Contact</a></p>
         </div>
     </footer>
