--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 
     <div id="table-div"></div>
 
-    <img id="water-features" src="https://maps.googleapis.com/maps/api/staticmap?maptype=roadmap&center=1.412811,103.774780&scale=2&zoom=14&size=640x640&style=feature:administrative|visibility:off&style=feature:landscape|visibility:off&style=feature:poi|visibility:off&style=feature:road|visibility:off&style=feature:transit|visibility:off&style=feature:water|color:0x000000&style=element:labels|visibility:off&key=AIzaSyBP9pYHfZKn0Ts4xt7eV89X-3YH6ohAKJQ">
+    <img id="water-features" src="https://maps.googleapis.com/maps/api/staticmap?maptype=roadmap&center=1.412811,103.774780&scale=2&zoom=15&size=640x640&style=feature:administrative|visibility:off&style=feature:landscape|visibility:off&style=feature:poi|visibility:off&style=feature:road|visibility:off&style=feature:transit|visibility:off&style=feature:water|color:0x000000&style=element:labels|visibility:off&key=AIzaSyBP9pYHfZKn0Ts4xt7eV89X-3YH6ohAKJQ">
+
+    <canvas width="1280" height="1280" id="myCanvas"></canvas>
 
     <footer>
         <div id="footer-text">
